--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2",
-    "mysql2": "3.6.3"
+    "mysql2": "3.6.3",
+    "zod": "3.22.4"
   },
   "name": "movie-database",
   "version": "1.0.0",
